# PDFEditor

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/PDFEditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pdfeditor/: __init__.py  __main__.py  cli.py  detect_empty.py  detect_render.py  models.py  processor.py  pypdf_debug.py  reporting.py  rewrite.py  stamp_page_numbers.py
tests/: README.md  __init__.py  pdf_factory.py  test_bookmark_drop.py  test_cli_end_to_end.py  test_cli_modes.py  test_cli_page_number_parse.py  test_cli_render_margin_parse.py  test_detection_matrix.py  test_invisible_paint_detection.py  test_page_number_stamping.py  test_pypdf_warning_capture.py  test_render_debug_output.py  test_render_detection.py  test_rewrite_behavior.py  test_smoke.py  test_structural_debug_output.py  test_wordlike_blank_page.py
uat/: README.md
uat/input/: Corporate_UAT_Advanced.docx
uat/reports/: run_report_20260228_075240.json  run_report_20260228_075240.txt
