[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "PDFEditor"
version = "1.0.0"
description = "CLI scaffold for conservative PDF editing workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pypdf", "pypdfium2"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
pdfeditor = "pdfeditor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
